Create project base packages, added first activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BThermometer</string>
+    <string name="title_activity_temperature">TemperatureActivity</string>
 </resources>
