--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">BThermometer</string>
-    <string name="title_activity_temperature">TemperatureActivity</string>
+    <string name="title_activity_temperature">BThermometer</string>
     <string name="bt_not_supported">Device does not support Bluetooth!</string>
+    <string name="temperature">"Temperature \u00B0C"</string>
 </resources>
